--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	        <div class="col-md-8 text-center d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
 	        		<span class="subheading">Web Crawling</span>
-	            <h1 class="mb-3">Get data from and website</h1>
+	            <h1 class="mb-3">Get data from any website</h1>
 	            <p>Get clean data from any website without the technical expertise</p>
 	            <p><a href="#" class="btn btn-secondary px-4 py-3">Get Started Now</a></p>
 	          </div>
