--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@ Get Data or your money-back - That's our promise.</p>
                 <p>If there are any issues found in the sample - the data mining team will fix them. Most common issues are format changes, parsing changes and other small issues.
 
 The approval of the sample usually happens on the second or third iteration.</p>
-              </div>s
+              </div>
             </div>    
           </div>
           <div class="col-lg-4 d-flex align-self-stretch ftco-animate">
