--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
                 <ul>
                   <li><span class="icon icon-map-marker"></span><span class="text">Flat No A603 The Nest Ravet, Pune</span></li>
                   <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 75884 38713</span></a></li>
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">dhakeparag3@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">dhakeparag3@gmail.com/sagayakwad26@gmail.com</span></a></li>
                 </ul>
               </div>
             </div>
