--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
               <h2 class="ftco-heading-2">Office</h2>
               <div class="block-23 mb-3">
                 <ul>
-                  <li><span class="icon icon-map-marker"></span><span class="text">Flat No A603 The Nest Ravet, Pune</span></li>
+                  <li><span class="icon icon-map-marker"></span><span class="text"> Neeti Tarangan, Pune</span></li>
                  <!-- <li><a href="#"><span class="icon icon-phone"></span><span class="text"></span></a></li>-->
                   <li><a href="#"><span class="icon icon-envelope"></span><span class="text">crawlslabHR@gmail.com</span></a></li>
                 </ul>
