--- a/contact.html
+++ b/contact.html
@@ -71,19 +71,20 @@
 		          	<div class="icon">
 		          		<span class="icon-map-o"></span>
 		          	</div>
-		            <p><span>Address:</span> Flat No A603 The Nest Ravet, Pune</p>
+		            <p><span>Address:</span> 	Neeti Tarangan, Pune
+</p>
 		          </div>
 		          <div class="col-md-4 text-center border-height py-4">
 		          	<div class="icon">
 		          		<span class="icon-mobile-phone"></span>
 		          	</div>
-		            <p><span>Phone:</span> <a href="tel://1234567920">+91 75884 38713</a></p>
+		           <!-- <p><span>Phone:</span> <a href="tel://1234567920"></a></p>-->
 		          </div>
 		          <div class="col-md-4 text-center py-4">
 		          	<div class="icon">
 		          		<span class="icon-envelope-o"></span>
 		          	</div>
-		            <p><span>Email:</span> <a href="mailto:info@yoursite.com">dhakearag3@gmail.com</a></p>
+		            <p><span>Email:</span> <a href="mailto:info@yoursite.com">crawlslabHR@gmail.com</a></p>
 		          </div>
 		        </div>
           </div>
