--- a/about.html
+++ b/about.html
@@ -182,9 +182,9 @@ If you need data on a recurring basis - we can schedule it on our platform and d
               <h2 class="ftco-heading-2">Office</h2>
               <div class="block-23 mb-3">
                 <ul>
-                  <li><span class="icon icon-map-marker"></span><span class="text"> Neeti Tarangan, Pune</span></li>
+                  <li><span class="icon icon-map-marker"></span><span class="text">  306, F6 Unit, Jay Ganesh Samrajya, Pune</span></li>
                  <!-- <li><a href="#"><span class="icon icon-phone"></span><span class="text"></span></a></li> -->
-                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">crawlslabHR@gmail.com</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hr@crawlslab.com</span></a></li>
                 </ul>
               </div>
             </div>
